<resources>
    <string name="app_name">NotificationApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_notifications">NotificationsActivity</string>
    <string name="title_activity_info">" "</string>
    <string name="action_settings">Settings</string>
    <string name="notification_time">Notification Time:</string>
    <string name="notification_day">Notification Day:</string>
    <string name="name">Name</string>
    <string name="description">Description</string>
    <string name="image_path">Image Path</string>
    <string name="month_day">Month/Day</string>
    <string name="hour_minute">Hour/Minute</string>
    <string name="log_in">Log In</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">Password</string>
    <string name="register">Register</string>
    <string name="login">log in</string>
    <string name="skip">skip</string>
</resources>
