<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/aaa"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.AddNotificationActivity">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/name_input_margin">

        <EditText
            android:id="@+id/add_not_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/desc_input_margin">

        <EditText
            android:id="@+id/add_not_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/image_input_margin">

        <EditText
            android:id="@+id/add_not_img"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/image_path" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/month_day"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/month_day" />

        <ImageButton
            android:id="@+id/add_not_month"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/month_day"
            android:background="@null"
            android:src="@drawable/ic_today_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:layout_toStartOf="@+id/add_not_hour"
            android:text="@string/hour_minute" />

        <ImageButton
            android:id="@+id/add_not_hour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="@dimen/add_hour_margin"
            android:background="@null"
            android:src="@drawable/ic_access_time_black_24dp" />
    </RelativeLayout>

    <ImageButton
        android:id="@+id/add_notification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:src="@drawable/ic_check_circle_black_24dp" />
</LinearLayout>